# dpy-cogwatch-poetry-template

./: .env.template  .gitignore  README.md  pyproject.toml  scripts.py
bot/: client.py
bot/commands/: ping.py
